Mon, Dec 15, 2008
---------------------------------------------------------------------
- More work on leads index page.
- Added leads fixture that uses [faker] gem.
- Restructured status settings to use :label and :color.

Sun, Dec 14, 2008
---------------------------------------------------------------------
- Work on leads schema, model, and fixtures.

Sat, Dec 13, 2008
---------------------------------------------------------------------
- Insalled [annotate_models] plugin and generated model annotations.
- Generated campaign fixtures.
- Updated [Campaign] model to include actual vs. targets.
- Added permissions to [Campaign/New].
- Cleaned up specs and fixtures.

Thu, Dec 11, 2008
---------------------------------------------------------------------
- New tableless design for campaign index page.
- Added new .list CSS styles.
- Made select date popup work with Safari.

Wed, Dec 10, 2008
---------------------------------------------------------------------
- Made calendar_date_select work with field getting focus (campaign/new).
- More work on list of campaigns page.

Tue, Dec 9, 2008
---------------------------------------------------------------------
- Implemented [Campaing/New] with dates validation and status set.

Mon, Dec 8, 2008
---------------------------------------------------------------------
- More work polishing campaigns.
- Added rake task to reset the application (rake app:reset).
- Automatically set focus on first form field.

Sun, Dec 7, 2008
---------------------------------------------------------------------
- Work on [campaigns] database schema and model.
- Started with [Campaigns/New], integrated calendar_date_select for start/end dates.

Sat, Dec 6, 2008
---------------------------------------------------------------------
- Implemented account deletion.
- Fixes for header and signup page layout.

Fri, Dec 5, 2008
---------------------------------------------------------------------