@@ -1,10 +1,8 @@
 %tt
-  %span{:class => campaign.status}<
-    = @status[campaign.status.intern][:label].downcase
   - case campaign.status.intern
     - when :started
       - if campaign.starts_on
-        = time_ago_in_words(campaign.starts_on) << " ago"
+        == started #{time_ago_in_words(campaign.starts_on)} ago
         - if campaign.ends_on
           - if campaign.ends_on > Date.today
             %span>= ", finishes in " << distance_of_time_in_words(Date.today, campaign.ends_on)
@@ -15,7 +13,7 @@
     - when :planned
       - if campaign.starts_on
         - if campaign.starts_on > Date.today
-          = " starts in " << distance_of_time_in_words(Date.today, campaign.starts_on)
+          = "starts in " << distance_of_time_in_words(Date.today, campaign.starts_on)
         - elsif campaign.starts_on < Date.today
           %span.warn= "(was supposed to start on " << distance_of_time_in_words(campaign.starts_on, Date.today) << " ago #{campaign.starts_on.strftime('%b %e, %Y')})"
         - else
@@ -23,4 +21,4 @@
       - else
         %span.warn no start date specified
     - when :completed
-      = "on #{campaign.ends_on.strftime('%b %e, %Y')}" if campaign.ends_on
+      = "completed on #{campaign.ends_on.strftime('%b %e, %Y')}" if campaign.ends_on
