@@ -1,7 +1,7 @@
 - content_for :styles do
   %style
     - @status.each do |key, value|
-      == .#{key} { padding:0px 3px 1px 3px; color:#3f3f3f; background:#{value[:color]}; }
+      == .#{key} { background:#{value[:color]}; }
 
 .title_menu= link_to "Create New Campaign", new_campaign_path
 .title Campaigns
@@ -9,11 +9,14 @@
 .list
   - unless @campaigns.empty?
     - for campaign in @campaigns
-      %li
-        -### = link_to(image_tag("edit_12x12.png", :title => "Edit #{h(campaign.name)} campaign"), edit_campaign_path(campaign))
-        = link_to(campaign.name, campaign)
-        = render :partial => "status", :locals => { :campaign => campaign }
-        = render :partial => "metrics", :locals => { :campaign => campaign }
+      %li{ highlightable(dom_id(campaign)) }
+        .strip{:class => campaign.status}= @status[campaign.status.intern][:label]
+        %div
+          .tools[campaign]{ hidden }
+            = link_to(image_tag("edit_12x12.png", :title => "Edit campaign: #{h(campaign.name)}"), edit_campaign_path(campaign))
+          = link_to(campaign.name, campaign)
+          = render :partial => "status", :locals => { :campaign => campaign }
+          = render :partial => "metrics", :locals => { :campaign => campaign }
   - else
     %div== You don't have any campaigns set up. Please #{link_to("create new campaign", new_campaign_path)} first.
 
