@@ -19,109 +19,106 @@
 #  updated_at       :datetime
 #
 
-# Read about fixtures at http://ar.rubyonrails.org/classes/Fixtures.html
-
-a:
+<%
+  require "faker"
+  Faker::PhoneNumber::Formats = ["(###)###-####"]
+%>
+account1:
   id: 1
   user_id: 1
-  name: Australian Arts and Crafts
+  name: <%= company = Faker::Company.name %>
   access: Private
   notes: Met them at convention center last fall.
-  website: http://www.astalavista-artists.com
-  phone: +1(09)555-1212
-  fax: +1(09)555-1213
-  billing_address: "Floor 5, 240 Wandalo Esp.\nNew Canberra WA\n1234 Australia"
-  shipping_address: "Floor 5, 240 Wandalo Esp.\nNew Canberra WA\n1234 Australia"
+  website: http://www.<%= company.downcase.gsub(/\W/, "") %>.com
+  phone: <%= Faker::PhoneNumber.phone_number %>
+  fax: <%= Faker::PhoneNumber.phone_number %>
+  billing_address: |
+    <%= addr1 = Faker::Address.street_address + " " + Faker::Address.secondary_address %>
+    <%= addr2 = Faker::Address.city + ", " + Faker::Address.us_state_abbr + " " + Faker::Address.zip_code %>
+  shipping_address: |
+    <%= addr1 %>
+    <%= addr2 %>
   deleted_at:
   created_at: <%= starts = Date.today - rand(15).days %>
   updated_at: <%= starts + rand(5).days %>
 
-b:
+account2:
   id: 2
   user_id: 1
-  name: Boveri Brands S.A.
+  name: <%= company = Faker::Company.name %>
   access: Private
   notes: These guys have been running their network marketing firm since 1990.
-  website: http://www.ballparkbrands.com
-  phone: +1(17)555-2233
-  fax: +1(17)555-2234
-  billing_address: "Rue du Cornet 6\nB-4800 Verviers, Belgium"
-  shipping_address: "Rue du Cornet 6\nB-4800 Verviers, Belgium"
+  website: http://www.<%= company.downcase.gsub(/\W/, "") %>.com
+  phone: <%= Faker::PhoneNumber.phone_number %>
+  fax: <%= Faker::PhoneNumber.phone_number %>
+  billing_address: |
+    <%= addr1 = Faker::Address.street_address + " " + Faker::Address.secondary_address %>
+    <%= addr2 = Faker::Address.city + ", " + Faker::Address.us_state_abbr + " " + Faker::Address.zip_code %>
+  shipping_address: |
+    <%= addr1 %>
+    <%= addr2 %>
   deleted_at:
   created_at: <%= starts = Date.today - rand(15).days %>
   updated_at: <%= starts + rand(5).days %>
 
-c:
+account3:
   id: 3
   user_id: 2
-  name: Creative Cravings
+  name: <%= company = Faker::Company.name %>
   access: Shared
   notes: They have over 200 people working for them all over the world.
-  website: http://www.creativecravings.com
-  phone: (727)555-3412
-  fax: (727)555-7741
-  billing_address: "Prujezdna 9\n225 99 Praha 3\nCzech Republic"
-  shipping_address: "Prujezdna 9\n225 99 Praha 3\nCzech Republic"
+  website: http://www.<%= company.downcase.gsub(/\W/, "") %>.com
+  phone: <%= Faker::PhoneNumber.phone_number %>
+  fax: <%= Faker::PhoneNumber.phone_number %>
+  billing_address: |
+    <%= addr1 = Faker::Address.street_address + " " + Faker::Address.secondary_address %>
+    <%= addr2 = Faker::Address.city + ", " + Faker::Address.us_state_abbr + " " + Faker::Address.zip_code %>
+  shipping_address: |
+    <%= addr1 %>
+    <%= addr2 %>
   deleted_at:
   created_at: <%= starts = Date.today - rand(15).days %>
   updated_at: <%= starts + rand(5).days %>
 
-d:
+account4:
   id: 4
   user_id: 2
-  name: Daemon Desktop Designs
+  name: <%= company = Faker::Company.name %>
   access: Shared
   notes: Design firm from Denmark that builds beautiful desktops. Very well known in northern Europe.
-  website: http://www.ddd.dk
-  phone: +1(25)55-34-12
-  fax: +1(25)55-34-13
-  billing_address: "Niels Bohrs Alle 23, 1330\n5230 Odense, Denmark"
-  shipping_address: "Niels Bohrs Alle 23, 1330\n5230 Odense, Denmark"
+  website: http://www.<%= company.downcase.gsub(/\W/, "") %>.com
+  phone: <%= Faker::PhoneNumber.phone_number %>
+  fax: <%= Faker::PhoneNumber.phone_number %>
+  billing_address: |
+    <%= addr1 = Faker::Address.street_address + " " + Faker::Address.secondary_address %>
+    <%= addr2 = Faker::Address.city + ", " + Faker::Address.us_state_abbr + " " + Faker::Address.zip_code %>
+  shipping_address: |
+    <%= addr1 %>
+    <%= addr2 %>
   deleted_at:
   created_at: <%= starts = Date.today - rand(15).days %>
   updated_at: <%= starts + rand(5).days %>
 
-e:
-  id: 5
-  user_id: 2
-  name: Eesti Esquire Group
+<% 
+  for i in (5..15) do 
+%>
+account<%= i %>:
+  id: <%= i %>
+  user_id: 1
+  name: <%= company = Faker::Company.name %>
   access: Public
   notes: 
-  website: http://www.eestiesq.com
-  phone: +1(205)25-43-44
-  fax: +1(205)25-43-44
-  billing_address: "Rahukohtu 3\n15161 Tallinn\nEstonia"
-  shipping_address: "Rahukohtu 3\n15161 Tallinn\nEstonia"
+  website: http://www.<%= company.downcase.gsub(/\W/, "") %>.com
+  phone: <%= Faker::PhoneNumber.phone_number %>
+  fax: <%= Faker::PhoneNumber.phone_number %>
+  billing_address: |
+    <%= addr1 = Faker::Address.street_address + " " + Faker::Address.secondary_address %>
+    <%= addr2 = Faker::Address.city + ", " + Faker::Address.us_state_abbr + " " + Faker::Address.zip_code %>
+  shipping_address: |
+    <%= addr1 %>
+    <%= addr2 %>
   deleted_at:
   created_at: <%= starts = Date.today - rand(15).days %>
   updated_at: <%= starts + rand(5).days %>
 
-f:
-  id: 6
-  user_id: 2
-  name: Finn Travel Ltd.
-  access: Public
-  notes: One of the best travel agencies in Finland.
-  website: http://www.eestiesq.com
-  phone: (888)555-8768
-  fax: (888)555-8766
-  billing_address: "Albertinkatu 36 B\n00180 Helsinki\nFinland"
-  shipping_address: "Albertinkatu 36 B\n00180 Helsinki\nFinland"
-  deleted_at:
-  created_at: <%= starts = Date.today - rand(15).days %>
-  updated_at: <%= starts + rand(5).days %>
-
-g:
-  id: 7
-  user_id: 2
-  name: Gunter Gross Group
-  access: Public
-  notes: 
-  website: http://www.guntergross.de
-  phone: (888)555-4477
-  fax: (888)555-4478
-  billing_address: "Schulstrasse 4\n32547 Bad Oyenhausen\nGermany"
-  shipping_address: "Schulstrasse 4\n32547 Bad Oyenhausen\nGermany"
-  deleted_at:
-  created_at: <%= starts = Date.today - rand(15).days %>
-  updated_at: <%= starts + rand(5).days %>
+<% end %>
