@@ -1,3 +1,8 @@
+Tue, Dec 16, 2008
+---------------------------------------------------------------------
+- Updated designs for leads, campaigns, and opportunities using left-hand strips.
+- Implemented new design for accounts index page.
+
 Mon, Dec 15, 2008
 ---------------------------------------------------------------------
 - More work on leads index page.
